--- a/html/css/map.css
+++ b/html/css/map.css
@@ -28,6 +28,7 @@ body, html {
     border: 1px solid #000;
     width: 100%;
     height: 100%;
+    background: #000;
 }
 
 .leaflet-top.leaflet-right {
