--- a/html/css/map.css
+++ b/html/css/map.css
@@ -24,6 +24,11 @@ body, html {
     padding: 1%;
 }
 
+.iframed-map-holder {
+    width: 100%;
+    height: 100%;
+}
+
 .map {
     border: 1px solid #000;
     width: 100%;
