--- a/html/css/map.css
+++ b/html/css/map.css
@@ -65,19 +65,18 @@ body, html {
 .station-group-name {
     font-weight: bold;
     line-height: 1.5;
-    margin-bottom: 0.25em;
     border-bottom: 1px solid #000;
     padding: 0 0.25em;
 }
 
 .station-group-station {
-    line-height: 1.5;
-    padding: 0 0.25em;
+    padding: 0.3em 0.25em;
+    line-height: 1.3em;
 }
 
 .station-group-station:hover {
     cursor: pointer;
-    background-color: papayaWhip;
+    background-color: #ffee00;
 }
 
 .station-group-station + .station-group-station {
